k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec: # how this deployment behaves
  replicas: 3
  selector: # what it will use to find the set of Pods it will control
    matchLabels:
      component: server # indicates the componenet inside the application is the server
  template:
    metadata:
      labels:
        component: server # at least match inside of the spec
    spec:
      containers:
        - name: server
          image: maknovicell/multi-server # it does expect ENV VAR that tells it where to connect to redis and postgres
          ports:
            - containerPort: 5000
