k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment # worker image does not need to be accessible/connected to from the cluster of objects.
spec: # hence does not need a port or a service - clusterip service
  replicas: 1
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker # matches the selector
    spec:
      containers:
        - name: worker
          image: maknovicell/multi-worker
