k8s/redis-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-ip-service # that is the hostname. used to connect, exactly like URL
spec:
  type: ClusterIP
  selector:
    component: redis
  ports:
    - port: 6379 # hit from outside
      targetPort: 6379 # answer on the inside
