k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
# UPDATE API
kind: Ingress
metadata:
  name: ingress-service
  annotations: # additional config options that you specify higher level config around the ingress object
    kubernetes.io/ingress.class: 'nginx' # tells k8s that we want an ingress controller based on the nginx project
    nginx.ingress.kubernetes.io/use-regex: 'true' # user regex in path
    # ADD ANNOTATION
    nginx.ingress.kubernetes.io/rewrite-target: /$1 # config how the actual copy of nginx behaves. Rewrites the request. So server can serve without the api..?
    # UPDATE ANNOTATION
spec: # by default it uses https. works on dev. needs extra on prod.
  rules:
    - http:
        paths: # 2 possible paths to route traffic
          - path: /?(.*) # matches all but api and goes to client-cluster-ip-service on port 3000
            # UPDATE PATH
            pathType: Prefix
            # ADD PATHTYPE
            backend:
              service:
                # UPDATE SERVICE FIELDS
                name: client-cluster-ip-service
                port:
                  number: 3000
          - path: /api/?(.*) # if leading path name of api -> goes to server cluster. We refer to name of service. It figures out by itself.
            # UPDATE PATH
            pathType: Prefix
            # ADD PATHTYPE
            backend:
              service:
                # UPDATE SERVICE FIELDS
                name: server-cluster-ip-service
                port:
                  number: 5000
